samples/_failures_safe/1761456660_48801e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_312172b2.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_312172b2.c:175:13: error: expected expression at end of input
  175 |             for (int i =
      |             ^~~
./samples/SAFE/__tmp_312172b2.c:175:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_312172b2.c:175:13: error: expected declaration or statement at end of input
